--- a/firebase.json
+++ b/firebase.json
@@ -25,7 +25,7 @@
 			"rewrites": [
 				{
 					"source": "**",
-					"destination": "/index.html"
+					"destination": "browser/index.html"
 				}
 			],
 			"target": "fire-chat",
