--- a/firebase.json
+++ b/firebase.json
@@ -20,7 +20,7 @@
 	],
 	"hosting": [
 		{
-			"public": "public",
+			"source": "src",
 			"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
 			"rewrites": [
 				{
