--- a/firebase.json
+++ b/firebase.json
@@ -1,37 +1,32 @@
 {
-	"database": {
-		"rules": "database.rules.json"
-	},
-	"functions": [
-		{
-			"source": "functions",
-			"codebase": "default",
-			"ignore": [
-				"node_modules",
-				".git",
-				"firebase-debug.log",
-				"firebase-debug.*.log"
-			],
-			"predeploy": [
-				"npm --prefix \"$RESOURCE_DIR\" run lint",
-				"npm --prefix \"$RESOURCE_DIR\" run build"
-			]
-		}
-	],
-	"hosting": [
-		{
-			"source": "src",
-			"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-			"rewrites": [
-				{
-					"source": "**",
-					"destination": "browser/index.html"
-				}
-			],
-			"target": "fire-chat",
-			"frameworksBackend": {
-				"region": "europe-west1"
-			}
-		}
-	]
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint",
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ],
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "europe-west1"
+    }
+  }
 }
