--- a/firebase.json
+++ b/firebase.json
@@ -21,9 +21,8 @@
 	"hosting": {
 		"source": ".",
 		"target": "fire-chat",
-		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
 		"frameworksBackend": {
-			"region": "us-west1"
+			"region": "europe-west1"
 		}
 	}
 }
