--- a/angular.json
+++ b/angular.json
@@ -15,11 +15,11 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:application",
+					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": "public",
+						"outputPath": "dist/browser",
+						"main": "src/main.ts",
 						"index": "src/index.html",
-						"browser": "src/main.ts",
 						"polyfills": ["zone.js"],
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
@@ -28,12 +28,7 @@
 							"@angular/material/prebuilt-themes/indigo-pink.css",
 							"src/styles.scss"
 						],
-						"scripts": [],
-						"server": "src/main.server.ts",
-						"prerender": true,
-						"ssr": {
-							"entry": "server.ts"
-						}
+						"scripts": []
 					},
 					"configurations": {
 						"production": {
@@ -58,6 +53,32 @@
 						}
 					},
 					"defaultConfiguration": "production"
+				},
+				"server": {
+					"builder": "@angular-devkit/build-angular:server",
+					"options": {
+						"outputPath": "dist/server",
+						"main": "server.ts",
+						"tsConfig": "tsconfig.app.json"
+					},
+					"configurations": {
+						"development": {
+							"optimization": true,
+							"outputHashing": "all",
+							"sourceMap": false,
+							"namedChunks": false,
+							"extractLicenses": true,
+							"vendorChunk": true
+						},
+						"production": {
+							"optimization": true,
+							"outputHashing": "all",
+							"sourceMap": false,
+							"namedChunks": false,
+							"extractLicenses": true,
+							"vendorChunk": false
+						}
+					}
 				},
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
@@ -95,7 +116,8 @@
 					"builder": "@angular/fire:deploy",
 					"options": {
 						"version": 2,
-						"browserTarget": "fire-chat:build:production"
+						"browserTarget": "fire-chat:build:production",
+						"serverTarget": "fire-chat:server:production"
 					}
 				}
 			}
