--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,7 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.scss"
-						],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
 						"scripts": []
 					},
 					"configurations": {
@@ -35,13 +32,13 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
+									"maximumWarning": "2500kb",
+									"maximumError": "5mb"
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
+									"maximumWarning": "5kb",
+									"maximumError": "10kb"
 								}
 							],
 							"outputHashing": "all"
@@ -105,10 +102,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-							"@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.scss"
-						],
+						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
 						"scripts": []
 					}
 				},
