--- a/angular.json
+++ b/angular.json
@@ -53,28 +53,18 @@
 				},
 				"server": {
 					"builder": "@angular-devkit/build-angular:server",
+					"configurations": {
+						"production": {
+							"buildOptimizer": true
+						},
+						"development": {
+							"buildOptimizer": false
+						}
+					},
 					"options": {
 						"outputPath": "dist/server",
-						"main": "server.ts",
-						"tsConfig": "tsconfig.app.json"
-					},
-					"configurations": {
-						"development": {
-							"optimization": true,
-							"outputHashing": "all",
-							"sourceMap": false,
-							"namedChunks": false,
-							"extractLicenses": true,
-							"vendorChunk": true
-						},
-						"production": {
-							"optimization": true,
-							"outputHashing": "all",
-							"sourceMap": false,
-							"namedChunks": false,
-							"extractLicenses": true,
-							"vendorChunk": false
-						}
+						"main": "src/main.server.ts",
+						"tsConfig": "tsconfig.server.json"
 					}
 				},
 				"serve": {
@@ -104,14 +94,6 @@
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": ["@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
 						"scripts": []
-					}
-				},
-				"deploy": {
-					"builder": "@angular/fire:deploy",
-					"options": {
-						"version": 2,
-						"browserTarget": "fire-chat:build:production",
-						"serverTarget": "fire-chat:server:production"
 					}
 				}
 			}
